--- a/styles/style.css
+++ b/styles/style.css
@@ -69,7 +69,6 @@ ol {
   grid-template-areas: "result details";
   align-items: end;
   column-gap: 30px;
-  min-height: 534px;
 }
 
 .result {
@@ -89,116 +88,7 @@ ol {
 width: 100%;
 height: 100%;
 object-fit: cover;
-}
-
-.search-form {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  min-height: 54px;
-}
-
-.search-form__fieldset {
- border: none;
- align-self: flex-end;
-}
-
-.search-form__fieldset-title {
-font-weight: 400;
-font-size: 18px;
-line-height: 100%;
-margin-bottom: 5px;
-}
-
-.search-form__label {
-  display: flex;
-  width: fit-content;
-  cursor: pointer;
-  gap: 7px;
-}
-
-.search-form__label:focus {
-  outline: none;
-}
-
-.search-form__label:has(:focus-visible) {
-  outline: 1px solid #fff;
-}
-
-.search-form__textfield {
-  width: 225px;
-  height: 27px;
-  border: 0;
-  border-top: 1px solid #fff;
-  border-bottom: 1px solid #fff;
-  background-color: transparent;
-  outline: none;
-  appearance: none;
-  color: #fff;
-}
-
-.search-form__textfield::placeholder {
-  font-weight: 400;
-  font-size: 18px;
-  color: rgba(252, 252, 252, 0.7);
-}
-
-.search-form__checkbox-list {
-  display: flex;
-  justify-content: space-between;
-  width: 212px;
-  padding-bottom: 4px;
-}
-
-.search-form__label:has(.search-form__checkbox):hover {
-  text-decoration: underline;
-}
-
-.search-form__pseudo-checkbox {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  width: 19px;
-  height: 19px;
-  border: 1px solid #fff;
-}
-
-.search-form__checkbox:checked + .search-form__pseudo-checkbox::after {
-  content: "";
-  width: 15px;
-  height: 15px;
-  background-color: #fff;
-}
-
-.button {
-  background-color: transparent;
-  border: 1px solid #fff;
-  font-weight: 700;
-  font-size: 18px;
-  text-align: center;
-  color: #fff;
-  cursor: pointer;
-  padding: 0 3px 0 3px;
-}
-
-.button:hover {
-  text-decoration: underline;
-}
-
-.button:active {
-  background-color: #545050;
-}
-
-.search-form__submit-button {
-  width: 194px;
-  height: 34px;
-  align-self: self-end;
-}
-
-.more-button {
-  width: 100%;
-  height: 34px;
-  margin-top: 30px;
+object-position: center;
 }
 
 .content__details {
@@ -223,9 +113,9 @@ margin-bottom: 5px;
 
 .content__list-container {
   position: relative;
-  max-width: 399px;
-  max-height: 298px;
-  overflow-x: hidden;
+  width: 399px;
+  height: 298px;
+  overflow-y: auto;
 
 }
 
@@ -237,14 +127,25 @@ margin-bottom: 5px;
 
 .content__list-item {
   padding: 0 3px 0 3px;
+  width: 390px;
 }
 
 .content__card-link {
-  color: #fff;
+  color: currentColor;
   text-decoration: none;
 }
 
+.content__card-link:active {
+  display: block;
+  background-color: #545050;
+}
+
+.content__card-link:hover {
+  text-decoration: underline;
+}
+
 .content__card-link_current {
+  display: block;
   background-color: #545050;
 }
 
@@ -253,12 +154,8 @@ margin-bottom: 5px;
   flex-grow: 1;
 }
 
-.content__video-card-description-container:hover {
-  text-decoration: underline;
-}
-
 .content__video-card-title {
-  font-family: Oswald;
+  font-family: 'Oswald', sans-serif;
   font-weight: 700;
   font-size: 30px;
   text-transform: uppercase;
@@ -268,7 +165,7 @@ margin-bottom: 5px;
 }
 
 .content__video-card-description {
-  font-family: 'Fira Sans Condensed';
+  font-family: 'Fira Sans Condensed', sans-serif;
   font-weight: 400;
   font-size: 18px;
   line-height: 16.2px;
@@ -281,7 +178,6 @@ margin-bottom: 5px;
 
 .content__video-card {
   display: flex;
-  align-items: flex-start;
 }
 
 .content__video-card-thumbnail {
@@ -291,3 +187,130 @@ margin-bottom: 5px;
   object-position: center;
 }
 
+.search-form {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  min-height: 54px;
+}
+
+.search-form__fieldset {
+ border: none;
+ align-self: flex-end;
+}
+
+.search-form__fieldset-title {
+font-weight: 400;
+font-size: 18px;
+line-height: 100%;
+margin-bottom: 5px;
+}
+
+.search-form__label {
+  display: flex;
+  width: fit-content;
+  align-items: center;
+  cursor: pointer;
+  gap: 7px;
+}
+
+.search-form__label:focus {
+  outline: none;
+}
+
+.search-form__label:has(:focus-visible) {
+  outline: 1px solid currentColor;
+  outline-offset: 1px;
+}
+
+.search-form__textfield {
+  width: 225px;
+  height: 27px;
+  border: 0;
+  font-family: 'Fira Sans Condensed', sans-serif;
+  border-top: 1px solid currentColor;
+  border-bottom: 1px solid currentColor;
+  background-color: transparent;
+  appearance: none; 
+  outline: none;
+  appearance: none;
+  color: currentColor;
+}
+
+.search-form__textfield::placeholder {
+  font-weight: 400;
+  font-size: 18px;
+  color: rgba(252, 252, 252, 0.7);
+}
+
+.search-form__checkbox {
+  appearance: none; 
+}
+
+.search-form__checkbox-list {
+  display: flex;
+  justify-content: space-between;
+  width: 212px;
+  padding-bottom: 4px;
+}
+
+.search-form__label:has(.search-form__checkbox):hover {
+  text-decoration: underline;
+}
+
+.search-form__pseudo-checkbox {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 19px;
+  height: 19px;
+  border: 1px solid currentColor;
+}
+
+.search-form__checkbox:checked + .search-form__pseudo-checkbox::after {
+  content: "";
+  width: 15px;
+  height: 15px;
+  background-color: currentColor;
+}
+
+.button {
+  background-color: transparent;
+  border: 1px solid currentColor;
+  font-family: 'Fira Sans Condensed', sans-serif;
+  font-weight: 700;
+  font-size: 18px;
+  text-align: center;
+  color: currentColor;
+  cursor: pointer;
+  padding: 0 3px 0 3px;
+}
+
+.button:focus {
+  outline: none;
+}
+
+.button:focus-visible {
+  outline: 1px solid currentColor;
+  outline-offset: 1px;
+}
+
+.button:hover {
+  text-decoration: underline;
+}
+
+.button:active {
+  background-color: #545050;
+}
+
+.search-form__submit-button {
+  width: 194px;
+  height: 34px;
+  align-self: self-end;
+}
+
+.more-button {
+  width: 100%;
+  height: 34px;
+  margin-top: 30px;
+}
